--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
     <div class="container content">
       <header class="masthead">
         <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <!-- <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a> -->
+          <a href="https://math.nau.edu/" title="Home">{{ site.title }}</a>
+          <br>
           <small>{{ site.tagline }}</small>
         </h3>
       </header>
