--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <!-- <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a> -->
-          <a href="https://math.nau.edu/" title="Home">{{ site.title }}</a>
+          <a href="https://legacy.nau.edu/math/" title="Home">{{ site.title }}</a>
           <br>
           <small>{{ site.tagline }}</small>
         </h3>
